06/data_type.txt
abhishekrajput@Abhisheks-MacBook-Air Python % python3
Python 3.13.0 (v3.13.0:60403a5409f, Oct  7 2024, 00:37:40) [Clang 15.0.0 (clang-1500.3.9.4)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 12 + 12
24
>>> 2.5 * 5
12.5
>>> 2 ** 2
4
>>> 2 ** 100
1267650600228229401496703205376
>>> import math
>>> math.pi
3.141592653589793
>>> import random
>>> random.random()
0.24853726232025464
>>> random.choice([1,2,3,4,5])
5
>>> random.choice([1,2,3,4,5])
2
>>> username = "chaiaurcode"
>>> len(username)
11
>>> username[0]
'c'
>>> username[0] = 'A'
Traceback (most recent call last):
  File "<python-input-13>", line 1, in <module>
    username[0] = 'A'
    ~~~~~~~~^^^
TypeError: 'str' object does not support item assignment
>>> username[-1]
'e'
>>> username[-2]
'd'
>>> username[1:3]
'ha'
>>> dir(username)
['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mod__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__rmod__', '__rmul__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'capitalize', 'casefold', 'center', 'count', 'encode', 'endswith', 'expandtabs', 'find', 'format', 'format_map', 'index', 'isalnum', 'isalpha', 'isascii', 'isdecimal', 'isdigit', 'isidentifier', 'islower', 'isnumeric', 'isprintable', 'isspace', 'istitle', 'isupper', 'join', 'ljust', 'lower', 'lstrip', 'maketrans', 'partition', 'removeprefix', 'removesuffix', 'replace', 'rfind', 'rindex', 'rjust', 'rpartition', 'rsplit', 'rstrip', 'split', 'splitlines', 'startswith', 'strip', 'swapcase', 'title', 'translate', 'upper', 'zfill']
>>> mylist = [123,"chai", 3.14]
>>> mylist
[123, 'chai', 3.14]
>>> len(mylist)
3
>>> mylist[0]
123
>>> mylist[-1]
3.14
>>> myD = {'one':"lemon Tea", 'two':"Ginger tea", 'comic':"naagraj"}
>>> myD
{'one': 'lemon Tea', 'two': 'Ginger tea', 'comic': 'naagraj'}
>>> myD[0]
Traceback (most recent call last):
  File "<python-input-25>", line 1, in <module>
    myD[0]
    ~~~^^^
KeyError: 0
>>> myD[1]
Traceback (most recent call last):
  File "<python-input-26>", line 1, in <module>
    myD[1]
    ~~~^^^
KeyError: 1
>>> myD['comic'}
  File "<python-input-27>", line 1
    myD['comic'}
               ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '['
>>> myD['comic']
'naagraj'
>>> myD['comics']
Traceback (most recent call last):
  File "<python-input-29>", line 1, in <module>
    myD['comics']
    ~~~^^^^^^^^^^
KeyError: 'comics'
>>> myTup = (1, 2, 4)
>>> myTup
(1, 2, 4)
>>> myTup[0]
1
>>> len(myTup)
3
>>> 